<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/namesusercard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="49dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnllamarcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:backgroundTint="#1E232C"
                android:text="@string/btnphonecall"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/btnemailcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:backgroundTint="#1E232C"
                android:text="@string/btnemail"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/btnmensajecard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:backgroundTint="#1E232C"
                android:text="@string/btnmsn"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/btneditarcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:backgroundTint="#1E232C"
                android:text="@string/edit"
                app:cornerRadius="8dp" />

        </LinearLayout>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>