<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_et"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-47dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnback"
            android:layout_width="41dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="56dp"
            android:height="41dp"
            android:backgroundTint="#FFFFFF"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            app:cornerRadius="8dp"
            app:icon="@drawable/baseline_arrow_back_ios_new_24"
            app:iconGravity="textStart"
            app:iconPadding="2dp"
            app:iconTint="#1E232C"
            app:strokeColor="#E8ECF4"
            app:strokeWidth="1dp"
            app:tint="@color/black"
            />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="22dp"
            android:gravity="start"
            android:text="@string/welcomeregister"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border_et"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColor="#8391A1"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"/>

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border_et"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="#8391A1"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"/>

        <EditText
            android:id="@+id/etnames"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border_et"
            android:ems="10"
            android:hint="@string/names"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColor="#8391A1" />

        <EditText
            android:id="@+id/etcelphone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border_et"
            android:ems="10"
            android:hint="@string/cellphone"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColor="#8391A1" />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="#1E232C"
            android:text="@string/register2"
            app:cornerRadius="8dp"


            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/haveaccount"
                android:textAlignment="viewEnd"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/loginpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/loginnow"
                android:textAlignment="textStart"
                android:textColor="#35C2C1" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>