<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_et"
    tools:context=".ui.activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_et"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-47dp">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnback"
            android:layout_width="41dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="56dp"
            android:height="41dp"
            android:backgroundTint="#FFFFFF"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            app:cornerRadius="8dp"
            app:icon="@drawable/baseline_arrow_back_ios_new_24"
            app:iconGravity="textStart"
            app:iconPadding="2dp"
            app:iconTint="#1E232C"
            app:strokeColor="#E8ECF4"
            app:strokeWidth="1dp"
            app:tint="@color/black" />
        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="22dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border_et"
            android:ems="10"
            android:hint="@string/login2"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:textColor="#8391A1"
            />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border_et"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="#8391A1"

            />

        <Button
            android:id="@+id/btnfotgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/forgotpassword"
            android:textColor="#6A707C"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="120dp"
            android:backgroundTint="#1E232C"
            android:text="@string/login2"
            app:cornerRadius="8dp"
            android:layout_marginRight="22dp"
            android:layout_marginLeft="22dp"


            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/noaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/noaccount"
                android:textAlignment="viewEnd"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/loginpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="@string/registernow"
                android:textAlignment="textStart"
                android:textColor="#35C2C1" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>