<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <LinearLayout
        android:id="@+id/fondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/fondo"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">



            <ImageView
                android:id="@+id/icono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo"
                android:layout_marginTop="400dp"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:id="@+id/iub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/titulo_iub"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                />

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#1E232C"
                android:text="@string/login"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/btnregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/register"
                android:textColor="#1E232C"
                app:cornerRadius="8dp"
                app:strokeColor="#1E232C"
                app:strokeWidth="1dp" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>